--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,9 @@
 <body>
     {{>header}}
     <main>
+        <p>
+            This site was created by Renat Krasava. It uses data from mapbox.com and darksky.net .
+        </p>
         <img class="eater" src="/img/eater.jpg" alt="">
     </main>
     {{>footer}}
