--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -10,7 +10,7 @@
 <body>
     {{>header}}
     <main>
-    
+    <h3>Type in the place and find out what is the weather like there.</h3>
     <form action="">
         <input placeholder="location" type="text">
         <button type="submit">Search</button>
